--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,77 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
+.app {
+  background-color: #9f8b87;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.logo {
+  position: absolute;
+  left: 100px;
+  top: 50px;
+  height: 30px;
+  pointer-events: none;
+}
+
+.bg-orange {
+  background-color: #f46b37;
+  cursor: pointer;
+  transition: all 300ms;
+}
+
+.bg-orange:hover {
+  opacity: 0.8;
+  flex: 5 5 0%;
+}
+
+.flex-2 {
+  flex: 2 2 0%;
+}
+
+.flex-3 {
+  flex: 3 3 0%;
+}
+
+.bg-grey {
+  background-color: #0b0f11;
+}
+
+h1 {
+  font-size: 72px;
+  font-weight: 800;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.upper-container {
+  padding: 0 100px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.hr {
+  width: 120px;
+  background-color: white;
+  height: 1px;
+  margin-left: 20px;
+}
+
+.h1-border {
+  color: rgba(0, 0, 0, 0);
+  -webkit-text-stroke: 1px white;
+  margin-top: -30px;
+}
+
+h2 {
+  color: white;
+  font-size: 22px;
+  font-weight: 800;
+}
+
+.icon {
+  border: 2px solid white;
+  border-radius: 25px;
+  margin-right: 15px;
+}
+
+.icon:hover {
+  opacity: 0.7;
+  cursor: pointer;
 }
