--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,15 @@
+h1 {
+  font-size: 72px;
+  font-weight: 800;
+  color: white;
+}
+
+h2 {
+  color: white;
+  font-size: 22px;
+  font-weight: 800;
+}
+
 .app {
   background-color: #9f8b87;
   min-height: 100vh;
@@ -17,11 +29,11 @@
   background-color: #f46b37;
   cursor: pointer;
   transition: all 300ms;
-}
 
-.bg-orange:hover {
-  opacity: 0.8;
-  flex: 5 5 0%;
+  &:hover {
+    opacity: 0.8;
+    flex: 5 5 0%;
+  }
 }
 
 .flex-2 {
@@ -34,16 +46,6 @@
 
 .bg-grey {
   background-color: #0b0f11;
-}
-
-h1 {
-  font-size: 72px;
-  font-weight: 800;
-  color: white;
-}
-
-.upper-container {
-  padding: 0 100px;
 }
 
 .hr {
@@ -59,19 +61,13 @@ h1 {
   margin-top: -30px;
 }
 
-h2 {
-  color: white;
-  font-size: 22px;
-  font-weight: 800;
-}
-
 .icon {
   border: 2px solid white;
   border-radius: 25px;
   margin-right: 15px;
-}
 
-.icon:hover {
-  opacity: 0.7;
-  cursor: pointer;
+  &:hover {
+    opacity: 0.7;
+    cursor: pointer;
+  }
 }
