--- a/src/App.scss
+++ b/src/App.scss
@@ -18,10 +18,8 @@ h2 {
 }
 
 .logo {
-  position: absolute;
-  left: 100px;
-  top: 50px;
   height: 30px;
+  width: 29px;
   pointer-events: none;
 }
 
@@ -49,7 +47,7 @@ h2 {
 }
 
 .hr {
-  width: 120px;
+  width: 100px;
   background-color: white;
   height: 1px;
   margin-left: 20px;
@@ -69,5 +67,29 @@ h2 {
   &:hover {
     opacity: 0.7;
     cursor: pointer;
+  }
+}
+
+.tech-icon {
+  width: 78px;
+  height: 78px;
+  margin: 20px;
+
+  &:hover {
+    opacity: 0.7;
+    cursor: pointer;
+  }
+}
+
+.animate {
+  animation: App-logo-spin infinite 20s linear;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
   }
 }
