--- a/src/App.scss
+++ b/src/App.scss
@@ -1,95 +1,69 @@
 h1 {
-  font-size: 72px;
-  font-weight: 800;
-  color: white;
+    font-size: 72px;
+    font-weight: 800;
+    color: white;
 }
 
 h2 {
-  color: white;
-  font-size: 22px;
-  font-weight: 800;
+    color: white;
+    font-size: 22px;
+    font-weight: 800;
 }
 
 .app {
-  background-color: #9f8b87;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-}
-
-.logo {
-  height: 30px;
-  width: 29px;
-  pointer-events: none;
-}
-
-.bg-orange {
-  background-color: #f46b37;
-  cursor: pointer;
-  transition: all 300ms;
-
-  &:hover {
-    opacity: 0.8;
-    flex: 5 5 0%;
-  }
-}
-
-.flex-2 {
-  flex: 2 2 0%;
-}
-
-.flex-3 {
-  flex: 3 3 0%;
-}
-
-.bg-grey {
-  background-color: #0b0f11;
+    background: rgb(163, 189, 237);
+    background: linear-gradient(
+        90deg,
+        rgba(163, 189, 237, 1) 0%,
+        rgba(105, 145, 199, 1) 100%
+    );
+    display: flex;
+    height: 100vh;
+    flex-direction: column;
 }
 
 .hr {
-  width: 50px;
-  background-color: white;
-  height: 1px;
-  margin-left: 20px;
+    width: 50px;
+    background-color: white;
+    height: 1px;
+    margin-left: 20px;
 }
 
 .h1-border {
-  color: rgba(0, 0, 0, 0);
-  -webkit-text-stroke: 1px white;
-  margin-top: -30px;
+    color: rgba(0, 0, 0, 0);
+    -webkit-text-stroke: 1px white;
+    margin-top: -30px;
 }
 
 .icon {
-  border: 2px solid white;
-  border-radius: 25px;
-  margin-right: 15px;
+    border: 2px solid white;
+    border-radius: 25px;
+    margin: 0 10px;
 
-  &:hover {
-    opacity: 0.7;
-    cursor: pointer;
-  }
+    &:hover {
+        opacity: 0.7;
+        cursor: pointer;
+    }
 }
 
 .tech-icon {
-  width: 78px;
-  height: 78px;
-  margin: 20px;
-
-  &:hover {
-    opacity: 0.7;
-    cursor: pointer;
-  }
+    width: 78px;
+    height: 78px;
+    margin: 20px;
+    &:hover {
+        opacity: 0.7;
+    }
 }
 
 .animate {
-  animation: App-logo-spin infinite 20s linear;
+    animation: App-logo-spin infinite 20s linear;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
