--- a/src/App.scss
+++ b/src/App.scss
@@ -13,12 +13,9 @@ h2 {
 .app {
     background: linear-gradient(
         90deg,
-        rgba(163, 189, 237, 1) 0%,
+        rgba(163, 189, 250, 1) 0%,
         rgba(105, 145, 199, 1) 100%
     );
-    display: flex;
-    height: 100vh;
-    flex-direction: column;
 }
 
 .hr {
@@ -65,4 +62,10 @@ h2 {
     to {
         transform: rotate(360deg);
     }
+}
+
+.sahar {
+    height: 200px;
+    border-radius: 100px;
+    opacity: 0.9
 }
