--- a/src/App.scss
+++ b/src/App.scss
@@ -10,7 +10,7 @@ h2 {
     font-weight: 800;
 }
 
-.app {
+.linear-background {
     background: linear-gradient(
         90deg,
         rgba(163, 189, 250, 1) 0%,
@@ -34,7 +34,6 @@ h2 {
 .icon {
     border: 2px solid white;
     border-radius: 25px;
-    margin: 0 10px;
 
     &:hover {
         opacity: 0.7;
@@ -46,6 +45,7 @@ h2 {
     width: 78px;
     height: 78px;
     margin: 20px;
+    opacity: 0.9;
     &:hover {
         opacity: 0.7;
     }
