--- a/src/App.scss
+++ b/src/App.scss
@@ -1,11 +1,9 @@
 h1 {
   font-size: 72px;
   font-weight: 800;
-  color: white;
 }
 
 h2 {
-  color: white;
   font-size: 22px;
   font-weight: 800;
 }
@@ -20,19 +18,19 @@ h2 {
 
 .hr {
   width: 50px;
-  background-color: white;
+  background-color: black;
   height: 1px;
   margin-left: 20px;
 }
 
 .h1-border {
   color: rgba(0, 0, 0, 0);
-  -webkit-text-stroke: 1px white;
+  -webkit-text-stroke: 1px black;
   margin-bottom: -40px;
 }
 
 .icon {
-  border: 2px solid white;
+  border: 2px solid black;
   border-radius: 25px;
   transition: all 300ms;
 
@@ -44,4 +42,13 @@ h2 {
 
 .sub-border {
   margin-top: -10px;
+}
+
+.profile-picture {
+  width: 166px;
+  border: 1px solid lightgray;
+}
+
+.header {
+  font-size: 28px;
 }
